Fix nearest landmarks page fatal error

--- a/app/views/landmarks/nearest.html.erb
+++ b/app/views/landmarks/nearest.html.erb
@@ -60,7 +60,7 @@
 <div class="container">
   <h1>Nearby Google Places</h1>
   <div class="row">
-    <% places.each do |place| %>  <!-- Start -->
+    <% @places.each do |place| %>  <!-- Start -->
     <div class="col-xs-12 col-md-6">
       <% if place.photos[0] != nil %> <!-- Start -->
 
