--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,7 +2,9 @@
   <div class="banner-content">
    <%= image_tag 'guided.png' %>
    <p>Everyone is a storyteller</p>
-   <%= link_to "Discover Nearby Stories", nearest_landmark_path, class: "btn btn-primary btn-lg", id: "get_location" %>
+   <%= link_to nearest_landmark_path, class: "btn btn-primary btn-lg", id: "get_location"  do %>
+    Discover Nearby Stories <i class="fa fa-spinner fa-spin discover-nearby-spinner" style="display: none;"></i>
+   <% end %>
  </div>
 </div>
 
